lab3/Service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: reactapp
spec:
  selector:
    tier: reactapp
  ports:
  - port: 3000
    targetPort: 3000
