lab3/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: reactapp
  labels:
    name: reactapp
spec:
  rules:
  - host: reactapp.default.svc.cluster.local
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: reactapp
            port: 
              number: 3000
  tls:
  - hosts:
    - reactapp.default.svc.cluster.local
    secretName: reactapp-tls-cert
